--- a/theme/style.css
+++ b/theme/style.css
@@ -1,7 +1,7 @@
 html, body {
-    margin: 0;
-    border: 0;
+    margin: 20px;
+    border: 10px;
     font-size: 100%;
-    background-color: #000000;
+    background-color: #FFBF00;
     color: #ffffff;
   }
